@@ -138,6 +138,7 @@ AC_MSG_RESULT($PLATFORM)
 AC_DEFINE_UNQUOTED(LAZYFS_PLATFORM, "$PLATFORM", [The canonical name for @PLATFORM@ symlinks])
 
 dnl PKG_REQUIRE(libxml-2.0, 2.0.0)
+echo '  (D-BUS is available from freedesktop.org)'
 PKG_REQUIRE(dbus-1, 0.12)
 
 AC_CHECK_HEADER(expat.h, [], [
